# DroneCoverageProblem

./: README.md
codeCG/code/base/: drone_class.cpp  drone_class.h  graph.cpp  graph.h  node.h  problem.cpp  problem.h  target.h
codeCG/code/branching/: bb_node.cpp  bb_node.h
codeCG/code/column/: column.h  column_pool.h  solution.cpp
codeCG/code/masterproblem/: mp_linear_solution.h  mp_solver.cpp
codeCG/code/preprocessing/: graph_generator.cpp  graph_generator.h  problem_data.h
codeCG/code/subproblem/: sp_solver.cpp
codeCG/opt/: solved_instances.txt
data/: base_case.txt
data/input/: Case_101_12_1_10_1_2.txt  Case_101_12_1_10_1_4.txt  Case_101_12_1_10_2_2.txt  Case_101_12_1_10_2_4.txt  Case_101_12_1_20_1_2.txt  Case_101_12_1_20_1_4.txt  Case_101_12_1_20_2_2.txt  Case_101_12_1_20_2_4.txt  Case_101_18_1_10_1_2.txt  Case_101_18_1_10_1_4.txt  Case_101_18_1_10_2_2.txt  Case_101_18_1_10_2_4.txt  Case_101_18_1_20_1_2.txt  Case_101_18_1_20_1_4.txt  Case_101_18_1_20_2_2.txt  Case_101_18_1_20_2_4.txt  Case_101_24_1_10_1_2.txt  Case_101_24_1_10_1_4.txt  Case_101_24_1_10_2_2.txt  Case_101_24_1_10_2_4.txt  Case_101_24_1_20_1_2.txt  Case_101_24_1_20_1_4.txt  Case_101_24_1_20_2_2.txt  Case_101_24_1_20_2_4.txt  Case_101_30_1_10_1_2.txt  Case_101_30_1_10_1_4.txt  Case_101_30_1_10_2_2.txt  Case_101_30_1_10_2_4.txt  Case_101_36_1_10_1_2.txt  Case_101_36_1_10_1_4.txt  Case_101_36_1_10_2_2.txt  Case_101_36_1_10_2_4.txt  Case_101_36_1_20_1_2.txt  Case_101_36_1_20_1_4.txt  Case_101_36_1_20_2_2.txt  Case_101_36_1_20_2_4.txt  Case_101_6_1_10_1_2.txt  Case_101_6_1_10_1_4.txt  Case_101_6_1_10_2_2.txt  Case_101_6_1_10_2_4.txt  (+5 more)
sourcecode/: CMakeLists.txt
sourcecode/code/: main.cpp
sourcecode/code/base/: arc.cpp  arc.h  graph_properties.h  inspection.h  node.cpp
sourcecode/code/branching/: bb_node.cpp  bb_node.h  bb_tree.cpp  bb_tree.h
sourcecode/code/column/: column.cpp  solution.cpp  solution.h
sourcecode/code/masterproblem/: mp_integer_solution.h  mp_solver.h
sourcecode/code/preprocessing/: problem_data.cpp  program_params.cpp  program_params.h
sourcecode/code/subproblem/: sp_integer_solution.h  sp_solver.h
sourcecode/opt/: launch_jobs.sh
